--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <header class="navbar navbar-expand-lg sticky-top p-3">
+    <header class="navbar navbar-expand-lg sticky-top p-3" id="header1">
         <div class="container">
             <h1 class="navbar-brand m-0">Museu da cidade</h1>
             <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu-nav">
@@ -21,7 +21,7 @@
             </button>
             <nav class="navbar-collapse collapse justify-content-end" id="menu-nav">
                 <ul class="nav nav-pills d-block d-md-flex">
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a href="#about" class="nav-link"><i class="bi bi-house-door me-1"></i> Sobre o Museu</a>
                     </li>
                     <li class="nav-item">
@@ -50,13 +50,13 @@
     <!-- The slideshow/carousel -->
     <div class="carousel-inner">
         <div class="carousel-item active">
-        <img src="./images/1.jpg" alt="Los Angeles" class="d-block">
+        <img src="./images/1.jpg" alt="" class="d-block">
     </div>
         <div class="carousel-item">
-        <img src="./images/2.jpg" alt="Chicago" class="d-block">
+        <img src="./images/2.jpg" alt="" class="d-block">
     </div>
     <div class="carousel-item">
-        <img src="./images/3.jpg" alt="New York" class="d-block">
+        <img src="./images/3.jpg" alt="" class="d-block">
     </div>
     <div class="carousel-item">
         <img src="https://cdn.pixabay.com/photo/2015/07/15/20/08/paris-846873_960_720.jpg" alt="New York" class="d-block">
@@ -69,6 +69,225 @@
     <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
         <span class="carousel-control-next-icon"></span>
     </button>
+    </div>
+
+    <div data-bs-spy="scroll" data-bs-target="header1">
+        <section id="about">
+            <div class="pt-5 pb-5">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-5">
+                            <img src="https://cdn.pixabay.com/photo/2012/07/06/00/56/plantation-51548_960_720.jpg" class="d-block w-100 rounded" alt="Fachada do museu">
+                        </div>
+                        <div class="col-md-7">
+                            <h2 class="titulo">Sobre o Museu</h2>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis, nemo iure molestias enim a amet error impedit quo maiores deserunt corporis minus neque iste repudiandae similique quia sunt, rerum laudantium.</p>
+                            <ul class="lista">
+                                <li>Valorização e preservação do patrimônio cultural e ambiental;</li>
+                                <li>Promoção da cidadania;</li>
+                                <li>Cumprimento da função social;</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="events" class="pb-5 pt-5" style="background-color: #dfd3c3;">
+            <div class="container">
+                <div class="row">
+                    <h2 class="titulo text-center pb-4">Venha nos visitar</h2>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        <img class="d-block w-100 rounded mb-2" src="https://cdn.pixabay.com/photo/2017/08/02/11/26/art-2571027_960_720.jpg" alt="mulher visitando quadros">
+                        <h3 class="titulo"><i class="bi bi-pip me-1 fs-4"></i> Muitas atrações</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id debitis ullam maxime, accusamus magni cupiditate officiis enim labore saepe animi quam itaque quidem quia. Ratione voluptatibus deleniti harum nihil officia?</p>
+                    </div>
+                    <div class="col-md-4">
+                        <img class="d-block w-100 rounded mb-2" src="https://cdn.pixabay.com/photo/2020/04/23/14/45/museum-5082786__340.jpg" alt="espaço interno">
+                        <h3 class="titulo"><i class="bi bi-pip me-1 fs-4"></i> Muitas atrações</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id debitis ullam maxime, accusamus magni cupiditate officiis enim labore saepe animi quam itaque quidem quia. Ratione voluptatibus deleniti harum nihil officia?</p>
+                    </div>
+                    <div class="col-md-4">
+                        <img class="d-block w-100 rounded mb-2" src="https://cdn.pixabay.com/photo/2016/02/03/13/35/museum-1177081_960_720.jpg" alt="mulher visitando quadros">
+                        <h3 class="titulo"><i class="bi bi-pip me-1 fs-4"></i> Muitas atrações</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id debitis ullam maxime, accusamus magni cupiditate officiis enim labore saepe animi quam itaque quidem quia. Ratione voluptatibus deleniti harum nihil officia?</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="destaques">
+            <div class="container">
+                <div class="row">
+                    <h2 class="titulo text-center pb-4 mt-4">Destaques</h2>
+                </div>
+                <div class="row">
+                    <aside class="col-md-2">
+                        <nav class="nav nav-pills flex-column" id="submenu">
+                            <button type="button" data-bs-toggle="tab" data-bs-target="#pinturas" class="botao fw-bold text-start mb-1 nav-item active">Pinturas</button>
+                            <button type="button" data-bs-toggle="tab" data-bs-target="#esculturas" class="botao fw-bold text-start mb-1 nav-item">Esculturas</button>
+                            <button type="button" data-bs-toggle="tab" data-bs-target="#arq" class="botao fw-bold text-start mb-1 nav-item">Arquitetura</button>
+                        </nav>
+                    </aside>
+                    <div class="col-md-10">
+                        <div class="tab-content">
+                            <div class="tab-pane active" id="pinturas">
+                                <div class="row">
+                                    <div class="col-md-3">
+                                        <img class="d-block w-100" src="https://cdn.pixabay.com/photo/2016/08/04/21/02/museum-1570823_960_720.jpg" alt="">
+                                        <h5 class="titulo fw-bold mt-2">Artista reconhecido</h5>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis fugiat iste eveniet vitae aliquid voluptatibus r</p>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <img class="d-block w-100" src="https://cdn.pixabay.com/photo/2016/08/04/21/02/museum-1570823_960_720.jpg" alt="">
+                                        <h5 class="titulo fw-bold mt-2">Artista reconhecido</h5>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis fugiat iste eveniet vitae aliquid voluptatibus r</p>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <img class="d-block w-100" src="https://cdn.pixabay.com/photo/2016/08/04/21/02/museum-1570823_960_720.jpg" alt="">
+                                        <h5 class="titulo fw-bold mt-2">Artista reconhecido</h5>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis fugiat iste eveniet vitae aliquid voluptatibus r</p>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <img class="d-block w-100" src="https://cdn.pixabay.com/photo/2016/08/04/21/02/museum-1570823_960_720.jpg" alt="">
+                                        <h5 class="titulo fw-bold mt-2">Artista reconhecido</h5>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis fugiat iste eveniet vitae aliquid voluptatibus r</p>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <img class="d-block w-100" src="https://cdn.pixabay.com/photo/2016/08/04/21/02/museum-1570823_960_720.jpg" alt="">
+                                        <h5 class="titulo fw-bold mt-2">Artista reconhecido</h5>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis fugiat iste eveniet vitae aliquid voluptatibus r</p>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <img class="d-block w-100" src="https://cdn.pixabay.com/photo/2016/08/04/21/02/museum-1570823_960_720.jpg" alt="">
+                                        <h5 class="titulo fw-bold mt-2">Artista reconhecido</h5>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis fugiat iste eveniet vitae aliquid voluptatibus r</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="tab-pane" id="esculturas">
+                                <div class="row">
+                                    <div class="col-md-3">
+                                        <img class="d-block w-100" src="https://cdn.pixabay.com/photo/2018/10/11/17/37/angel-3740392_960_720.jpg" alt="">
+                                        <h5 class="titulo fw-bold mt-2">Bonitas esculturas</h5>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis fugiat iste eveniet vitae aliquid voluptatibus r</p>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <img class="d-block w-100" src="https://cdn.pixabay.com/photo/2018/10/11/17/37/angel-3740392_960_720.jpg" alt="">
+                                        <h5 class="titulo fw-bold mt-2">Esculturas criativas</h5>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis fugiat iste eveniet vitae aliquid voluptatibus r</p>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <img class="d-block w-100" src="https://cdn.pixabay.com/photo/2016/02/27/12/40/sculpture-1225487_960_720.jpg" alt="">
+                                        <h5 class="titulo fw-bold mt-2">Esculturas criativas</h5>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis fugiat iste eveniet vitae aliquid voluptatibus r</p>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <img class="d-block w-100" src="https://cdn.pixabay.com/photo/2016/02/27/12/40/sculpture-1225487_960_720.jpg" alt="">
+                                        <h5 class="titulo fw-bold mt-2">Esculturas criativas</h5>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis fugiat iste eveniet vitae aliquid voluptatibus r</p>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <img class="d-block w-100" src="https://cdn.pixabay.com/photo/2016/02/27/12/40/sculpture-1225487_960_720.jpg" alt="">
+                                        <h5 class="titulo fw-bold mt-2">Esculturas criativas</h5>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis fugiat iste eveniet vitae aliquid voluptatibus r</p>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <img class="d-block w-100" src="https://cdn.pixabay.com/photo/2016/02/27/12/40/sculpture-1225487_960_720.jpg" alt="">
+                                        <h5 class="titulo fw-bold mt-2">Esculturas criativas</h5>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis fugiat iste eveniet vitae aliquid voluptatibus r</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="tab-pane" id="arq">
+                                <div class="row">
+                                    <div class="col-md-3">
+                                        <img class="d-block w-100" src="https://cdn.pixabay.com/photo/2017/01/21/22/40/castle-1998435_960_720.jpg" alt="">
+                                        <h5 class="titulo fw-bold mt-2">Arquitetura fantástica</h5>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis fugiat iste eveniet vitae aliquid voluptatibus r</p>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <img class="d-block w-100" src="https://cdn.pixabay.com/photo/2017/01/21/22/40/castle-1998435_960_720.jpg" alt="">
+                                        <h5 class="titulo fw-bold mt-2">Arquitetura fantástica</h5>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis fugiat iste eveniet vitae aliquid voluptatibus r</p>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <img class="d-block w-100" src="https://cdn.pixabay.com/photo/2022/09/02/13/45/paris-7427636_960_720.jpg" alt="">
+                                        <h5 class="titulo fw-bold mt-2">Arquitetura fantástica</h5>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis fugiat iste eveniet vitae aliquid voluptatibus r</p>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <img class="d-block w-100" src="https://cdn.pixabay.com/photo/2022/09/02/13/45/paris-7427636_960_720.jpg" alt="">
+                                        <h5 class="titulo fw-bold mt-2">Arquitetura fantástica</h5>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis fugiat iste eveniet vitae aliquid voluptatibus r</p>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <img class="d-block w-100" src="https://cdn.pixabay.com/photo/2022/09/02/13/45/paris-7427636_960_720.jpg" alt="">
+                                        <h5 class="titulo fw-bold mt-2">Arquitetura fantástica</h5>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis fugiat iste eveniet vitae aliquid voluptatibus r</p>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <img class="d-block w-100" src="https://cdn.pixabay.com/photo/2022/09/02/13/45/paris-7427636_960_720.jpg" alt="">
+                                        <h5 class="titulo fw-bold mt-2">Arquitetura fantástica</h5>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis fugiat iste eveniet vitae aliquid voluptatibus r</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="contact" class="">
+            <div class="container">
+                <div class="row">
+                    <h2 class="titulo text-center pb-4 mt-4">Agende a sua visita</h2>
+                </div>
+                <div class="row">
+                    <div class="col-md-7">
+                        <form action="">
+                            <div class="mb-3">
+                                <label for="nome" class="titulo form-label">Nome</label>
+                                <input type="text" id="nome" class="form-control" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="email" class="titulo form-label">Email</label>
+                                <input type="email" id="email" class="form-control" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="tel" class="titulo form-label">Telefone (opicional)</label>
+                                <input type="tel" id="tel" class="form-control">
+                            </div>
+                            <div class="mb-3">
+                                <label for="men" class="titulo form-label">Mensagem</label>
+                                <textarea name="men" id="men" class="form-control" required></textarea>
+                            </div>
+                            <button type="submit" class="btn titulo mt-2 mb-4" id="Enviar">Enviar</button>
+                        </form>
+                    </div>
+                    <div class="col-md-5">
+                        <div class="row">
+                            <h3 class="titulo fs-4">Redes Sociais</h3>
+                            <ul class="social-links">
+                                <li>
+                                    <a href="#"><i class="bi bi-facebook titulo"></i></a>
+                                </li>
+                                <li>
+                                    <a href="#"><i class="bi bi-instagram titulo ms-1 me-1"></i></a>
+                                </li>
+                                <li>
+                                    <a href="#"><i class="bi bi-whatsapp titulo"></i></a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="row mt-4">
+                            <h3 class="titulo fs-4">Endereço</h3>
+                            <p>Rua histórica, 125, Rio de Janeiro - Rj</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
